[Chore] Salt key separation and Add Dapper, MysqlConnector

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=blueseekers.site:3306;Database=blue;User Id=root;Password=blue0703;"
+  },
+  "JwtSettings": {
+    "Secret": "blueseekers_0703_my_little_ocean_story", // 비밀 키 (16자 이상)
+    "Issuer": "http://localhost:7122", // 발행자 URL
+    "Audience": "http://localhost:7122", // 대상자 URL
+    "ExpiresInMinutes": 60 // 토큰 만료 시간 (분 단위)
+  }
 }
