[Feat] add dapper, create user, modules

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=blueseekers.site:3306;Database=blue;User Id=root;Password=blue0703;"
+    "DefaultConnection": "Server=blueseekers.site;Port=3306;Database=mylio;User Id=root;Password=blue0703;"
   },
   "JwtSettings": {
     "Secret": "blueseekers_0703_my_little_ocean_story", // 비밀 키 (16자 이상)
